Fix invisible scroll bars in the mapping view

--- a/specifyweb/frontend/js_src/css/wbplanview.css
+++ b/specifyweb/frontend/js_src/css/wbplanview.css
@@ -327,6 +327,11 @@
 
 .custom_select_options::-webkit-scrollbar {
 	width: 5px !important;
+	background: var(--b1);
+}
+
+.custom_select_options::-webkit-scrollbar-thumb {
+	background: var(--b3);
 }
 
 .custom_select_group {
